RESOLVED FIXED264935
[GStreamer][WebCodecs][Debug] ASSERTs in video encoder
https://bugs.webkit.org/show_bug.cgi?id=264935
Summary [GStreamer][WebCodecs][Debug] ASSERTs in video encoder
Philippe Normand
Reported 2023-11-16 03:11:55 PST
Thread 1 (Thread 0x7fdc4f018ec0 (LWP 713522)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007fdc644799ed in WTF::AtomStringImpl::remove(WTF::AtomStringImpl*) (string=0x7fdc458872a0) at /app/webkit/Source/WTF/wtf/text/AtomStringImpl.cpp:479 #2 0x00007fdc644875fc in WTF::StringImpl::~StringImpl() (this=0x7fdc458872a0, __in_chrg=<optimized out>) at /app/webkit/Source/WTF/wtf/text/StringImpl.cpp:124 #3 0x00007fdc644877ea in WTF::StringImpl::destroy(WTF::StringImpl*) (stringImpl=0x7fdc458872a0) at /app/webkit/Source/WTF/wtf/text/StringImpl.cpp:155 #4 0x00007fdc60639ada in WTF::StringImpl::deref() (this=0x7fdc458872a0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/text/StringImpl.h:1160 #5 0x00007fdc6063b81a in WTF::DefaultRefDerefTraits<WTF::StringImpl>::derefIfNotNull(WTF::StringImpl*) (ptr=0x7fdc458872a0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RefPtr.h:43 #6 0x00007fdc6063a634 in WTF::RefPtr<WTF::StringImpl, WTF::RawPtrTraits<WTF::StringImpl>, WTF::DefaultRefDerefTraits<WTF::StringImpl> >::~RefPtr() (this=0x7fdc455a2388, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/RefPtr.h:75 #7 0x00007fdc60639b00 in WTF::String::~String() (this=0x7fdc455a2388, __in_chrg=<optimized out>) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/text/WTFString.h:89 #8 0x00007fdc68c27ff9 in WebCore::GStreamerInternalVideoEncoder::~GStreamerInternalVideoEncoder() (this=0x7fdc455a2380, __in_chrg=<optimized out>) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:259 #9 0x00007fdc68c5dae8 in WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::GStreamerInternalVideoEncoder, (WTF::DestructionThread)1>() const::{lambda()#1}::operator()() const (__closure=0x7fdc457f86a8) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/ThreadSafeWeakPtr.h:101 #10 0x00007fdc68c6bad4 in WTF::Detail::CallableWrapper<WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::GStreamerInternalVideoEncoder, (WTF::DestructionThread)1>() const::{lambda()#1}, void>::call() (this=0x7fdc457f86a0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #11 0x00007fdc60fb1c41 in WTF::Function<void ()>::operator()() const (this=0x7ffed0437d50) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #12 0x00007fdc64407837 in WTF::RunLoop::performWork() (this=0x7fdc450180c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #13 0x00007fdc644bb972 in operator()(gpointer) const (__closure=0x0, userData=0x7fdc450180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #14 0x00007fdc644bb996 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #15 0x00007fdc644bb905 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x55d11086de50, callback=0x7fdc644bb979 <_FUN(gpointer)>, userData=0x7fdc450180c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #16 0x00007fdc644bb953 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #17 0x00007fdc55bb7527 in g_main_dispatch (context=0x55d11086dcf0) at ../glib/gmain.c:3460 #18 g_main_context_dispatch (context=0x55d11086dcf0) at ../glib/gmain.c:4200 #19 0x00007fdc55c14888 in g_main_context_iterate.constprop.0 (context=0x55d11086dcf0, block=<optimized out>, dispatch=1, self=<optimized out>) at ../glib/gmain.c:4276 #20 0x00007fdc55bb6d7f in g_main_loop_run (loop=0x55d11086de30) at ../glib/gmain.c:4479 #21 0x00007fdc644bbfc6 in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #22 0x00007fdc61f92679 in WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (this=0x7ffed0438020, argc=4, argv=0x7ffed04381e8) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:72 #23 0x00007fdc61f8f717 in WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) (argc=4, argv=0x7ffed04381e8) at /app/webkit/Source/WebKit/Shared/AuxiliaryProcessMain.h:98 #24 0x00007fdc61f8c1d3 in WebKit::WebProcessMain(int, char**) (argc=4, argv=0x7ffed04381e8) at /app/webkit/Source/WebKit/WebProcess/wpe/WebProcessMainWPE.cpp:75 #25 0x000055d10eabe8e9 in main(int, char**) (argc=4, argv=0x7ffed04381e8) at /app/webkit/Source/WebKit/WebProcess/EntryPoint/unix/WebProcessMain.cpp:31 STDERR: ASSERTION FAILED: The string being removed is an atom in the string table of an other thread! STDERR: iterator != atomStringTable.end() STDERR: /app/webkit/Source/WTF/wtf/text/AtomStringImpl.cpp(479) : static void WTF::AtomStringImpl::remove(WTF::AtomStringImpl*) imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any.html?baseline imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any.worker.html?high
Attachments
Philippe Normand
Comment 1 2023-11-16 04:26:08 PST
EWS
Comment 2 2023-11-17 04:36:44 PST
Committed 270883@main (0bb4da6c65e2): <https://commits.webkit.org/270883@main> Reviewed commits have been landed. Closing PR #20599 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-11-17 04:37:20 PST
Philippe Normand
Comment 4 2023-11-18 02:11:44 PST
Still happening.
Philippe Normand
Comment 5 2023-11-18 02:15:29 PST
EWS
Comment 6 2023-11-20 01:00:50 PST
Committed 270966@main (6656a3ab0212): <https://commits.webkit.org/270966@main> Reviewed commits have been landed. Closing PR #20702 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.