[GStreamer][WebCodecs][Debug] ASSERTs in video encoder https://bugs.webkit.org/show_bug.cgi?id=264935

Reviewed by Xabier Rodriguez-Calvar.

Pass owned strings to WorkQueue callbacks and make a copy of the codecName string in the internal
encoders, as attempts to fix flaky crashes that I am unable to reproduce here.

* Source/WebCore/platform/audio/gstreamer/AudioEncoderGStreamer.cpp:
(WebCore::GStreamerAudioEncoder::create):
* Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:
(WebCore::GStreamerVideoEncoder::create):

Canonical link: https://commits.webkit.org/270883@main